JAVAFX -commit